# fastapi_boilerplate

./: .gitignore  initial_data.py  prestart.py  prestart.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 01796e80fda3_create_user_table.py  29d26721f3d0_create_country_currency_table.py  49985c956d8a_create_user_country_table.py  4ba9fba98b6b_create_country_language_table.py  50d2e4a63143_create_user_permission_table.py  5dae9a17f9d6_create_role_permission_table.py  9c76a78e9720_create_country_table.py  ba81b46a2a2f_create_user_language_table.py  bf6bb2c1ce23_create_user_info_table.py  d139d5766e77_create_user_role_table.py  ec2cef051060_create_currency_table.py  f0850bce3024_create_language_table.py  f43ca57f0770_add_index_to_user_table.py  f6f4d3c20ab5_create_permission_table.py  fb46825a41d9_create_role_table.py
app/: main.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: country.py  login.py
app/core/: config.py  security.py
app/crud/: __init__.py  base.py  crud_country.py  crud_country_currency.py  crud_country_language.py  crud_currency.py  crud_language.py  crud_role.py  crud_user.py
app/db/: base.py  init_db.py
app/helpers/: curl.py
app/middleware/: acl.py
app/models/: __init__.py  country.py  country_currency.py  country_language.py  currency.py  language.py  role.py  user.py  user_role.py
app/schemas/: __init__.py  core.py  country.py  country_currency.py  country_language.py  currency.py  language.py  token.py  user.py
