[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Amirhossein Jani <amir.jani500@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
uvicorn = "^0.11.8"
python-multipart = "^0.0.5"
email-validator = "^1.1.1"
requests = "^2.24.0"
passlib = "^1.7.2"
tenacity = "^6.2.0"
pydantic = "^1.6.1"
emails = "^0.6"
gunicorn = "^20.0.4"
psycopg2-binary = "^2.8.6"
alembic = "^1.4.3"
sqlalchemy = "^1.3.19"
pytest = "^6.0.2"
python-jose = "^3.2.0"
psycopg2 = "^2.8.6"
jose = "^1.0.0"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
black = "^19.10b0"
isort = "^4.3.21"
autoflake = "^1.3.1"
flake8 = "^3.8.1"
pytest = "^6.0.2"
sqlalchemy-stubs = "^0.3"
#pytest-cov = "^4.0.0"


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

